// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages ActivitiesList should display the activity indicator in the footer if it is fetching 1`] = `
<ForwardRef(View)
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "marginVertical": 20,
      },
    ]
  }
>
  <_class
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    indeterminate={true}
    size="large"
    style={
      Object {
        "height": 36,
        "width": 36,
      }
    }
    styleAttr="Normal"
  />
</ForwardRef(View)>
`;

exports[`Pages ActivitiesList should display the header if it is not fetching 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`Pages ActivitiesList should renders correctly with activities and fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Activities"
  />
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "date_it_happened": "1991-12-17",
          "description": "My description",
          "summary": "Activity title",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages ActivitiesList should renders correctly with activities and fetching 2`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`Pages ActivitiesList should renders correctly with activities and fetching 3`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Activities"
  />
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "date_it_happened": "1991-12-17",
          "description": "My description",
          "summary": "Activity title",
        },
        Object {
          "date_it_happened": "1993-12-17",
          "description": "My description 2",
          "summary": "Activity title 2",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages ActivitiesList should renders correctly with activities and fetching 4`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`Pages ActivitiesList should renders correctly with activities and fetching 5`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`Pages ActivitiesList should renders correctly without activities and fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Activities"
  />
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages ActivitiesList should renders correctly without activities and not fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    onBack={[MockFunction]}
    title="Activities"
  />
  <EmptyActivity
    image={1}
    subtitle="Keep track of what you’ve done."
    title="Have you done an activity with Theo lately?"
  />
</ForwardRef(View)>
`;
